# tdd-django-rest

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  release.sh
app/: .env  Dockerfile  Dockerfile.prod  docker-compose.yml  postgres_cmds.org  pytest.ini  requirements-dev.txt  requirements.txt  restclient.http  setup.cfg  sqlite_cmds.org
app/drf_project/: settings.py  urls.py  views.py
app/movies/: admin.py  models.py  serializers.py  urls.py  views.py
app/movies/migrations/: 0002_movie.py  0003_alter_movie_year.py
app/tests/: test_foo.py  test_models.py  test_ping.py
app/tests/movies/: test_serializers.py  test_views.py  test_views_unit.py
drf_project/: settings.py  urls.py
movies/migrations/: 0001_initial.py
