[tool.poetry]
name = "tdd-django-rest"
version = "0.1.0"
description = ""
authors = ["Kay Freyer <kay.freyer@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
isort = "^5.13.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
